fix missing margin when no subjects

--- a/src/components/work/related/Related.module.css
+++ b/src/components/work/related/Related.module.css
@@ -1,7 +1,7 @@
 .section section {
   padding-top: 0 !important;
 }
-.section {
+.noSubjectSetTopMargin {
   margin-top: calc(var(--pt16) * -1);
 }
 
